force-app/main/default/objects/QuickBooks_Location_Setting__mdt/QuickBooks_Location_Setting__mdt.object-meta.xml
<CustomObject>
    <label>QuickBooks Location Setting</label>
    <pluralLabel>QuickBooks Location Settings</pluralLabel>
</CustomObject>