force-app/main/default/objects/QuickBooks_Location_Setting__mdt/fields/Client_Billable_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Billable_Item_ID__c</fullName>
    <label>Client Billable Item ID</label>
    <type>TextArea</type>
</CustomField>