force-app/main/default/objects/QuickBooks_Location_Setting__mdt/fields/Expense_Credit_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Expense_Credit_Item_ID__c</fullName>
    <label>Expense/Credit Item ID</label>
    <type>TextArea</type>
</CustomField>