force-app/main/default/objects/QuickBooks_Location_Setting__mdt/fields/Mileage_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Item_ID__c</fullName>
    <label>Mileage Item ID</label>
    <type>TextArea</type>
</CustomField>