force-app/main/default/objects/QuickBooks_Location_Setting__mdt/fields/Named_Credential_Key__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Key__c</fullName>
    <description>Stores the Named Credential identifier (e.g., Wisconsin or Milwaukee)</description>
    <label>Named Credential Key</label>
    <type>TextArea</type>
</CustomField>