force-app/main/default/objects/QuickBooks_Location_Setting__mdt/fields/Realm_ID__c.field-meta.xml
<CustomField>
    <fullName>Realm_ID__c</fullName>
    <description>Stores the QuickBooks Realm ID</description>
    <label>Realm ID</label>
    <type>TextArea</type>
</CustomField>